--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "pyrandom2pm"
-description = "Package that returns random outputs depending on the function."
+description = "Pyrandom2pm is a fun package to generate random results. This could be used for random number generation, using it answer your questions using 8-ball, and other unsure scenarios."
 dynamic=["version"]
 authors = [
   { name="Minjae Lee", email="ml6722@nyu.edu" },
