added install tomli

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -59,6 +59,7 @@ jobs:
           pip install --user pipenv
           pipenv install pytest
           pipenv install
+          pipenv install tomli
       - name: Build package
         run: |
           pipenv install build
