--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -64,8 +64,11 @@ jobs:
         run: |
           pipenv install build
           pipenv run python -m build .
-      - name: Publish to PyPI
-        uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          password: ${{ secrets.TEST_PYPI_API_TOKEN }}
+      - name: Publish to TestPyPI
+        run: |
+          python3 -m twine upload dist/*
+        env:
+          TWINE_USERNAME: __token__
+          TWINE_PASSWORD: ${{ secrets.TEST_PYPI_API_TOKEN }}
           repository_url: https://test.pypi.org/legacy/
+          TWINE_REPOSITORY: testpypi
