--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ keywords = ["python", "package", "build", "random"]
 requires-python = ">=3.9"
 classifiers = [
     "Programming Language :: Python :: 3",
-    "Intended Audience :: Anyone",
+    "Intended Audience :: Education",
     "Operating System :: OS Independent",
 ]
 
