--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -34,6 +34,7 @@ jobs:
         pip install --user pipenv
         pipenv install pytest
         pipenv install
+        pipenv install exceptiongroup
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Turn on 'editable' mode
       run: |
