--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -75,5 +75,7 @@ jobs:
       id-token: write
     steps:
       # retrieve your distributions here
-      - name: Publish package distributions to PyPI
+      - name: Publish package distributions to TestPyPI
         uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          repository-url: https://test.pypi.org/legacy/
